--- a/style.css
+++ b/style.css
@@ -1,9 +1,159 @@
-body {
-  background-color: powderblue;
-}
-h1 {
-  color: blue;
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 p {
-  color: red;
+    text-indent: 20px;
+    font-weight: 700;
+}
+body {
+    min-height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: 'Agdasima', sans-serif;
+}
+html {
+    scroll-behavior: smooth; 
+}
+.nav-list{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style: none;
+}
+.nav-link{
+    padding: 0 20px;
+    text-decoration: none;
+    color: black;
+    background-color:rgb(226, 133, 12);
+    font-size: 25px;
+    font-weight: 700;
+    line-height: 50px;
+}
+li a:hover {
+    color: white;
+    text-decoration: none;  
+    transition: color 0.5s;
+}
+.container {
+    max-width: 1440px;
+    margin: 0 auto;
+}
+.header{
+    height: 350px;
+    width: 100%;
+}
+.header_photo {
+    float: left;
+    padding-right: 10px;
+    z-index: 1;
+}
+.header_section_profile {
+    height: 300px;
+    background-color:rgb(226, 133, 12);
+    text-align: center;
+    display: block;
+    font-size: 40px;
+    font-weight: 700;
+    padding-top: 5%;
+    padding-left: 25%;
+}
+.main {
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.main_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.aside {
+    position: absolute;
+    bottom: 0px;
+    height: 100%;
+    background: rgb(226, 133, 12);
+    padding: 10px;
+    width: 300px;
+    float: left;
+}
+.side_info {
+    text-align: center;
+    padding-top: 20px;
+}
+.contacts_list {
+    margin: 0;
+    padding: 10px;  
+    list-style: none;
+    text-indent: 20px;
+    font-weight: 700;
+}
+.contacts {
+    font-size: 20px;
+    font-weight: 700;
+}
+.main_content_container{
+    position: relative;
+    padding-left: 300px;
+}
+.header_main_section {
+    background: rgb(226, 133, 12);
+    text-align: left;
+    padding-left: 100px;
+}
+.header_main_content {
+    font-size: 25px;
+    padding: 20px 20px 20px 20px;
+    border: 2px solid rgb(226, 133, 12);
+}
+.pre {
+    background-color: rgb(215, 211, 211);
+    border-radius: 3px;
+    overflow: auto;
+    word-wrap: normal;
+    white-space: pre;
+}
+.code {
+    background-color: darkgrey;
+}
+.main_content_ul {
+    margin-left: 30px;
+    text-indent: 20px;
+    font-weight: 700;
+}
+.contact_link:hover {
+    color:rgb(226, 133, 12);
+    text-decoration: none;  
+    transition: color 0.5s;
+}
+.footer{
+    position: relative;
+    padding-top: 14px;
+}
+.footer-container {
+    height: 170px;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    color: black;
+}
+.footer_link {
+    padding: 0 20px;
+    text-decoration: none;
+    color: black;
+    background-color:white;
+    font-size: 25px;
+    font-weight: 700;
+    line-height: 50px;
+}
+.footer_link:hover {
+    color:rgb(226, 133, 12);
+    text-decoration: none;  
+    transition: color 0.5s;
 }
